--- a/lib/messagebundles/xml/display/audio_fr.properties
+++ b/lib/messagebundles/xml/display/audio_fr.properties
@@ -9,7 +9,7 @@ audios__audio__seconds__  = Durée^20
 audios__audio__year__     = Année^20
 audios__audio__language__ = Langue
 audios__audio__SHA1__     = Signature SHA1^10
-audios__audio__bitrate__  = Débit binaire^20
+audios__audio__bitrate__  = Débit^20
 audios__audio__price__    = Prix
 audios__audio__link__     = Lien
 audios__audio__comments__ = Commentaires
