--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -1938,7 +1938,7 @@ OPTIONS_CONNECTIONS_MAIN_TITLE=Conexiones
 #### OPTIONS_SHUTDOWN_MAIN_TITLE=Shutdown
 OPTIONS_SHUTDOWN_MAIN_TITLE=Cerrar
 #### OPTIONS_UPDATE_MAIN_TITLE=Updates
-#? OPTIONS_UPDATE_MAIN_TITLE=
+OPTIONS_UPDATE_MAIN_TITLE=Actualizaciones
 #### OPTIONS_CHAT_MAIN_TITLE=Chat
 OPTIONS_CHAT_MAIN_TITLE=Chat
 #### OPTIONS_PLAYER_MAIN_TITLE=Player
@@ -2223,15 +2223,16 @@ OPTIONS_SHUTDOWN_TO_TRAY_LABEL=Minimizar a la bandeja del sistema
 # Key/Value pairs for update options
 ################################################################################
 #### OPTIONS_UPDATE_TITLE=Update Options
-#? OPTIONS_UPDATE_TITLE=
+OPTIONS_UPDATE_TITLE=Opciones de Actualizaciones
 #### OPTIONS_UPDATE_LABEL=You can choose when you want to be notified of new LimeWire releases.
-#? OPTIONS_UPDATE_LABEL=
+OPTIONS_UPDATE_LABEL=Ud. puede elegir cuando desea ser notificado de nuevas
+#versiones de LimeWire.
 #### OPTIONS_UPDATE_BETA=Beta Releases
-#? OPTIONS_UPDATE_BETA=
+OPTIONS_UPDATE_BETA=Versiones Beta
 #### OPTIONS_UPDATE_SERVICE=Service Releases
-#? OPTIONS_UPDATE_SERVICE=
+OPTIONS_UPDATE_SERVICE=Versiones de Servicio
 #### OPTIONS_UPDATE_MAJOR=Major Releases
-#? OPTIONS_UPDATE_MAJOR=
+OPTIONS_UPDATE_MAJOR=Versiones Mayores
 
 ################################################################################
 # Key/Value pairs for the chat options in the options window
