--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1012,6 +1012,7 @@ ERROR_INVALID_NAME_GENERIC=LimeWire cannot open a necessary file because the fil
 ################################################################################
 ERROR_INTERNAL_TITLE=Internal Error
 ERROR_INTERNAL_SERVLET=LimeWire has encountered an internal error. It is possible for LimeWire to recover and continue running normally. To aid with debugging, please click 'Send' to notify LimeWire about the problem. If desired, you can click 'Review' to look at the information that will be sent. Thank you.
+ERROR_INTERNAL_OLD=LimeWire has encountered an internal error.  It is possible for LimeWire to recover and continue running normally.  To continue using LimeWire, click 'Discard'.  If desired, you can click 'Review' to look at the information about the error.
 ERROR_INTERNAL_SEND=Send
 ERROR_INTERNAL_REVIEW=Review
 ERROR_INTERNAL_DISCARD=Discard
@@ -1019,7 +1020,7 @@ ERROR_INTERNAL_COPY=Copy Report
 ERROR_INTERNAL_OK=OK
 ERROR_INTERNAL_ALWAYS_SEND=Always Send Immediately
 ERROR_INTERNAL_ALWAYS_REVIEW=Always Ask For Review
-ERROR_INTERNAL_ALWAYS_DISCARD=Always Discard Bugs
+ERROR_INTERNAL_ALWAYS_DISCARD=Always Discard All Errors
 ERROR_INTERNAL_SERVLET_FAILED=LimeWire was unable to connect to the bug server in order to send the below bug report. To aid in debugging, please copy the following text and email it to bugs@limewire.com. Thank you.
 
 ################################################################################
