Distinction between "Latin" (Basic) and "Latin (Western European)" to help break up the list of languages in the View menu, and on the translate page.

--- a/lib/messagebundles/MessagesBundle_sq.properties
+++ b/lib/messagebundles/MessagesBundle_sq.properties
@@ -10,7 +10,7 @@ LOCALE_COUNTRY_NAME=Shqipëria
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
-LOCALE_SCRIPT_NAME=Latin
+LOCALE_SCRIPT_NAME=Latin (Western European)
 LOCALE_ENGLISH_LANGUAGE_NAME=Albanian
 LOCALE_NSIS_NAME=Albanian
 
