--- a/lib/messagebundles/MessagesBundle_tl.properties
+++ b/lib/messagebundles/MessagesBundle_tl.properties
@@ -204,7 +204,7 @@ TOTD_CLOSE=Isara
 #### GETTING_STARTED_TITLE=Getting Started
 GETTING_STARTED_TITLE=Paano magsimula
 #### GETTING_STARTED_CONTENTS=To start using LimeWire, find the text field on the left, type in what you are looking for and click the "Search" button. If you are looking for only one type of content (music, video, etc...), you can narrow your search results by using the buttons above the text field.
-GETTING_STARTED_CONTENTS=Upang magsimulang gamitin ang LimeWire, hanapin ang text field sa kaliwa, i-type ang iyong hinahanap at i-click ang "Hanapin" button. Kung ikaw naman ay naghahanap ng isang uri ng bagay tulad ng (tugtugin, bideo, etc...), maaari mong bawasan ang mga resulta ng mga paghahanap sa pag-gamit ng mga button sa taas ng text field.
+GETTING_STARTED_CONTENTS=Upang magsimulang gamitin ang LimeWire, hanapin ang text field sa kaliwa, i-type ang iyong hinahanap at i-click ang "Maghanap" button. Kung ikaw naman ay naghahanap ng isang uri ng bagay tulad ng (tugtugin, bideo, etc...), maaari mong bawasan ang mga resulta ng mga paghahanap sa pag-gamit ng mga button sa taas ng text field.
 
 ###################################################################
 # Key/value pairs for the Going Pro image.
