--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -10,7 +10,7 @@ LOCALE_COUNTRY_NAME=España
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=Castellano
 LOCALE_SCRIPT_CODE=Latn
-LOCALE_SCRIPT_NAME=Latin
+LOCALE_SCRIPT_NAME=Latin (Western European)
 LOCALE_ENGLISH_LANGUAGE_NAME=Spanish
 LOCALE_NSIS_NAME=Spanish
 
