--- a/lib/messagebundles/MessagesBundle_eu.properties
+++ b/lib/messagebundles/MessagesBundle_eu.properties
@@ -10,7 +10,7 @@ LOCALE_COUNTRY_NAME=España, Francia
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
-LOCALE_SCRIPT_NAME=Latin
+LOCALE_SCRIPT_NAME=Latin (Western European)
 LOCALE_ENGLISH_LANGUAGE_NAME=Basque
 #? LOCALE_NSIS_NAME=
 
