--- a/lib/messagebundles/MessagesBundle_nn.properties
+++ b/lib/messagebundles/MessagesBundle_nn.properties
@@ -10,7 +10,7 @@ LOCALE_COUNTRY_NAME=Norge
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=Nynorsk
 LOCALE_SCRIPT_CODE=Latn
-LOCALE_SCRIPT_NAME=Latin
+LOCALE_SCRIPT_NAME=Latin (Western European)
 LOCALE_ENGLISH_LANGUAGE_NAME=Norwegian (New)
 #? LOCALE_NSIS_NAME=
 
