--- a/lib/messagebundles/MessagesBundle_pt_BR.properties
+++ b/lib/messagebundles/MessagesBundle_pt_BR.properties
@@ -10,7 +10,7 @@ LOCALE_COUNTRY_NAME=Brasil
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=Brasileiro
 LOCALE_SCRIPT_CODE=Latn
-LOCALE_SCRIPT_NAME=Latin
+LOCALE_SCRIPT_NAME=Latin (Western European)
 LOCALE_ENGLISH_LANGUAGE_NAME=Portuguese (Brasilian)
 LOCALE_NSIS_NAME=PortugueseBR
 
