A few fixes in headers, change the local name or Irish

--- a/lib/messagebundles/MessagesBundle_ga.properties
+++ b/lib/messagebundles/MessagesBundle_ga.properties
@@ -1,17 +1,17 @@
 ################################################################################
 # Messages Bundle for LimeWire 4.8.2
-# Specialization for: Irish (Gaelic) - Ireland
+# Specialization for: Irish Gaelic - Ireland
 # Dummy resources bundle for missing translation.
 ################################################################################
 LOCALE_LANGUAGE_CODE=ga
-LOCALE_LANGUAGE_NAME=Irish
+LOCALE_LANGUAGE_NAME=Gaeilge
 LOCALE_COUNTRY_CODE=
 LOCALE_COUNTRY_NAME=Éire
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
 LOCALE_SCRIPT_NAME=Latin (Other)
-LOCALE_ENGLISH_LANGUAGE_NAME=Irish
+LOCALE_ENGLISH_LANGUAGE_NAME=Irish Gaelic
 #? LOCALE_NSIS_NAME=
 
 ################################################################################
