--- a/lib/messagebundles/MessagesBundle_sr.properties
+++ b/lib/messagebundles/MessagesBundle_sr.properties
@@ -1,7 +1,7 @@
 ################################################################################
 # Messages Bundle for LimeWire 4.8.2
 # Specialization for: Serbian (Cyrillic) - Serbia-Montenegro
-# \u0422hanks to Borislav Tadic, Nikola Milosavljevic
+# Thanks to Borislav Tadic, Nikola Milosavljevic
 ################################################################################
 LOCALE_LANGUAGE_CODE=sr
 LOCALE_LANGUAGE_NAME=\u0421\u0440\u043f\u0441\u043a\u0438
