--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -967,7 +967,7 @@ MESSAGE_FILE_CORRUPT=LimeWire has detected a corruption in the file
 MESSAGE_CONTINUE_DOWNLOAD=Do you want to continue the download?
 MESSAGE_LANG_CHANGE=Please note that you must restart limewire for the language to change. Also, make sure that you have the required fonts for the selected language.
 MESSAGE_SENSITIVE_SHARE_TOP=You are attempting to share a folder that is likely to contain sensitive information:
-MESSAGE_SENSITIVE_SHARE_BOTTOM=LimeWire is committed to helping you avoid sharing personally sensitive data inadvertently.
+MESSAGE_SENSITIVE_SHARE_BOTTOM=Share this folder?
 
 ################################################################################
 # Key/Value pairs for the invalid save directory window that is displayed
