Translated ERROR_INTERNAL_OLD to spanish

--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -1750,7 +1750,7 @@ ERROR_INTERNAL_TITLE=Error interno
 #### ERROR_INTERNAL_SERVLET=LimeWire has encountered an internal error. It is possible for LimeWire to recover and continue running normally. To aid with debugging, please click 'Send' to notify LimeWire about the problem. If desired, you can click 'Review' to look at the information that will be sent. Thank you.
 ERROR_INTERNAL_SERVLET=LimeWire encontró un error interno. Es posible que LimeWire se recupere y continúe ejecutándose normalmente. Para ayudar a corregir los errores, haga clic en "enviar" para informar a LimeWire acerca del problema. Si lo desea, puede hacer clic en "revisar" para ver la información que se enviará. Gracias.
 #### ERROR_INTERNAL_OLD=LimeWire has encountered an internal error. It is possible for LimeWire to recover and continue running normally. To continue using LimeWire, click 'Discard'. If desired, you can click 'Review' to look at the information about the error.
-#? ERROR_INTERNAL_OLD=
+ERROR_INTERNAL_OLD=LimeWire encontró un error interno. Es posible que LimeWire se recupere y continúe ejecutándose normalmente. Para continuar utilizando LimeWire, haga clic en 'Descartar'. Si lo desea puede hacer clic en 'Revisar' para ver la información sobre el error.
 #### ERROR_INTERNAL_SEND=Send
 ERROR_INTERNAL_SEND=Enviar
 #### ERROR_INTERNAL_REVIEW=Review
