--- a/lib/messagebundles/MessagesBundle_el.properties
+++ b/lib/messagebundles/MessagesBundle_el.properties
@@ -1,7 +1,7 @@
 ################################################################################
 # Messages Bundle for LimeWire 4.8.2
 # Specialization for: Greek - Greece & Cyprus (Modern)
-# Thanks to Damianos, Ilias Aronidis & Andreas Fournaris
+# Thanks to Damianos Aronidis & Andreas Fournaris
 ################################################################################
 LOCALE_LANGUAGE_CODE=el
 LOCALE_LANGUAGE_NAME=\u0395\u03bb\u03bb\u03b7\u03bd\u03b9\u03ba\u03ac
