--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -1689,9 +1689,9 @@ MESSAGE_CONTINUE_DOWNLOAD=Voulez-vous poursuivre le téléchargement\u00a0?
 #### MESSAGE_LANG_CHANGE=Please note that you must restart limewire for the language to change. Also, make sure that you have the required fonts for the selected language.
 MESSAGE_LANG_CHANGE=Notez que LimeWire doit être redémarré pour prendre en compte le changement de langue. Aussi, assurez-vous de disposer des polices de caractères requises pour l'affichage de la langue sélectionnée.
 #### MESSAGE_SENSITIVE_SHARE_TOP=You are attempting to share a folder that is likely to contain sensitive information:
-#? MESSAGE_SENSITIVE_SHARE_TOP=
+MESSAGE_SENSITIVE_SHARE_TOP=Vous tentez de partager un dossier susceptible de contenir des informations sensibles ou personnelles\u00a0:
 #### MESSAGE_SENSITIVE_SHARE_BOTTOM=Share this folder?
-#? MESSAGE_SENSITIVE_SHARE_BOTTOM=
+MESSAGE_SENSITIVE_SHARE_BOTTOM=Voulez-vous vraiment partager ce dossier\u00a0?
 
 ################################################################################
 # Key/Value pairs for the invalid save directory window that is displayed
