Started on mediatype save locations.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -657,6 +657,8 @@ CV_TABLE_STRING_KBPSEC=KB/s
 CV_ADD_HOST_LABEL=Host:
 CV_ADD_PORT_LABEL=Port:
 CV_ADD_DIALOG_TITLE=Add Gnutella Connection
+CV_MEDIATYPE=Mediatype
+CV_DIRECTORY=Save Directory
 
 ################################################################################
 # Key/value pairs for strings in the library window
@@ -1166,6 +1168,11 @@ OPTIONS_SAVE_DIR_BROWSE_BUTTON_LABEL=Browse...
 OPTIONS_SAVE_DIR_DEFAULT_BUTTON_LABEL=Use Default
 OPTIONS_SAVE_DIR_BROWSE_BUTTON_TIP=Choose another Directory
 OPTIONS_SAVE_DIR_DEFAULT_BUTTON_TIP=Use the Default Directory
+OPTIONS_SAVE_MEDIATYPE_DIR_LABEL=Specify an optional download directory for each mediatype.
+OPTIONS_SAVE_RESET_BUTTON_LABEL=Reset
+OPTIONS_SAVE_RESET_BUTTON_TIP=Reset to Default Download Directory
+OPTIONS_SAVE_MEDIATYPE_DIR_BROWSE_BUTTON_LABEL=Browse...
+OPTIONS_SAVE_MEDIATYPE_DIR_BROWSE_BUTTON_TIP=Choose another Directory
 OPTIONS_PURGE_INCOMPLETE_TIME_TITLE=Incomplete Files
 OPTIONS_PURGE_INCOMPLETE_TIME_LABEL=You can automatically delete old incomplete download files.
 OPTIONS_PURGE_INCOMPLETE_TIME_NUMBER_LABEL=Days to Keep Incomplete Files:
