New messages about Sensitive Folder Sharing

--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -1689,9 +1689,9 @@ MESSAGE_CONTINUE_DOWNLOAD=¿Desea continuar con la descarga?
 #### MESSAGE_LANG_CHANGE=Please note that you must restart limewire for the language to change. Also, make sure that you have the required fonts for the selected language.
 MESSAGE_LANG_CHANGE=Tenga en cuenta que debe reiniciar LimeWire para que se modifique el idioma. Además, asegúrese de tener las fuentes necesarias para el idioma seleccionado.
 #### MESSAGE_SENSITIVE_SHARE_TOP=You are attempting to share a folder that is likely to contain sensitive information:
-#? MESSAGE_SENSITIVE_SHARE_TOP=
+MESSAGE_SENSITIVE_SHARE_TOP=Ud. esta a punto de compartir una carpeta que contiene información delicada
 #### MESSAGE_SENSITIVE_SHARE_BOTTOM=Share this folder?
-#? MESSAGE_SENSITIVE_SHARE_BOTTOM=
+MESSAGE_SENSITIVE_SHARE_BOTTOM=¿Compartir esta Carpeta?
 
 ################################################################################
 # Key/Value pairs for the invalid save directory window that is displayed
