Several Fixes on older tags by Fernando M. Goncalves C., thanks!

--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -256,9 +256,9 @@ SEARCH_TIP=Buscar y descargar archivos.
 #### MONITOR_TIP=View Searches and Uploads
 MONITOR_TIP=Ver búsquedas y cargas.
 #### CONNECTIONS_TIP=Show Connections to Other Clients
-CONNECTIONS_TIP=Conectar a otros clientes.
+CONNECTIONS_TIP=Mostrar Conexiones a otros clientes.
 #### LIBRARY_TIP=View Repository of Saved Files
-LIBRARY_TIP=Ver archivos guardados.
+LIBRARY_TIP=Ver Repositorio de Archivos Guardados.
 
 ################################################################################
 # Key/Value pairs for the pull-down menus in the main window
@@ -555,7 +555,7 @@ TABLES_DISPLAY_TOOLTIPS=Indicadores de funciones ampliados
 # Keys/value pairs for SearchView stuff...
 ################################################################################
 #### SEARCH_NOT_CONNECTED=You are not connected to the network. To connect, select "Connect" from the "File" menu. Your search may not return any results until you connect.
-SEARCH_NOT_CONNECTED=No está conectado a la red. Para conectarse, seleccione "conectar" desde el menú "archivo".
+SEARCH_NOT_CONNECTED=No está conectado a la red. Para conectarse, seleccione "Conectar" desde el menú "Archivo".Su búsqueda podría no arrojar ningún resultado hasta que se conecte.
 #### SEARCH_STILL_CONNECTING=LimeWire is currently connecting to the network. Your search may not return many results until you are fully connected to the network.
 SEARCH_STILL_CONNECTING=LimeWire se está conectando a la red. Su búsqueda podría no devolver tantos resultados mientras no este completamente conectado a la red.
 #### SEARCH_DOWNLOAD_BUTTON_LABEL=Download
@@ -619,7 +619,7 @@ SEARCH_VIRUS_MSG_THREE=seguro que desea descargarlo?
 #### SEARCH_SHOW_MESSAGE_MSG=Don't show this message again
 SEARCH_SHOW_MESSAGE_MSG=No volver a mostrar este mensaje
 #### SEARCH_DOWNLOAD_DIALOG_CONFIRM=Download Request
-SEARCH_DOWNLOAD_DIALOG_CONFIRM=Se solicita la descarga
+SEARCH_DOWNLOAD_DIALOG_CONFIRM=Solicitud de Descarga
 #### SEARCH_DEFAULT_FIELD_TITLE=Filename
 SEARCH_DEFAULT_FIELD_TITLE=Nombre del archivo
 #### SEARCH_MULTIPLE_HOSTS=Multiple
@@ -639,7 +639,7 @@ SEARCH_BROWSEHOST_TITLE=¿Tiene amigos?
 #### SEARCH_BROWSEHOST_DESC=Enter the IP address of a friend you'd like to connect to, click 'Direct Connect', and LimeWire will try to browse the files of that user.
 SEARCH_BROWSEHOST_DESC=Ingrese la dirección IP de un amigo a quien desea conectarse, haga clic en 'conexión directa' y LimeWire intentará buscar los archivos de dicho usuario.
 #### SEARCH_BROWSEHOST_MYIP=When your friends want to connect to you, they should enter
-SEARCH_BROWSEHOST_MYIP=Cuando sus amigos quieran conectarse, deben colocar
+SEARCH_BROWSEHOST_MYIP=Cuando sus amigos quieran conectarse con ud., deben colocar
 #### SEARCH_BROWSEHOST_FIREWALLED=Your computer is behind a firewall or router and cannot receive direct connections.
 SEARCH_BROWSEHOST_FIREWALLED=Su computadora está detrás de un CortaFuegos (Firewall) o Enrutador y no puede recibir conexiones directas.
 #### SEARCH_BROWSEHOST_BUTTON=Direct Connect
@@ -718,7 +718,7 @@ SEARCH_FILTER_MEDIA=Medios
 #### DOWNLOAD_LAUNCH_BUTTON_LABEL=Preview
 DOWNLOAD_LAUNCH_BUTTON_LABEL=Vista previa
 #### DOWNLOAD_LAUNCH_BUTTON_TIP=Preview the Selected Downloads
-DOWNLOAD_LAUNCH_BUTTON_TIP=Vista previa las descargas seleccionadas.
+DOWNLOAD_LAUNCH_BUTTON_TIP=Vista Previa de las descargas seleccionadas.
 #### DOWNLOAD_KILL_BUTTON_LABEL=Stop
 DOWNLOAD_KILL_BUTTON_LABEL=Detener la descarga
 #### DOWNLOAD_KILL_BUTTON_TIP=Stop Selected Downloads
@@ -730,7 +730,7 @@ DOWNLOAD_RESUME_BUTTON_TIP=Reintentar la descarga.
 #### DOWNLOAD_SOURCES_BUTTON_LABEL=Find Sources
 DOWNLOAD_SOURCES_BUTTON_LABEL=Encontrar fuentes
 #### DOWNLOAD_SOURCES_BUTTON_TIP=Try to Find Sources for Failed Downloads
-DOWNLOAD_SOURCES_BUTTON_TIP=Intentar encontrar las fuentes para la descarga que falló.
+DOWNLOAD_SOURCES_BUTTON_TIP=Intentar encontrar las fuentes descargas fallidas.
 #### DOWNLOAD_CLEAR_BUTTON_LABEL=Clear Inactive
 DOWNLOAD_CLEAR_BUTTON_LABEL=Borrar las descargas inactivas
 #### DOWNLOAD_CLEAR_BUTTON_TIP=Remove Inactive Downloads
@@ -774,7 +774,7 @@ LIBRARY_RENAME_BUTTON_LABEL=Renombrar
 #### PLAYLIST_LOAD_BUTTON_LABEL=Open...
 PLAYLIST_LOAD_BUTTON_LABEL=Abrir...
 #### PLAYLIST_LOAD_BUTTON_TIP=Open an Existing Play List
-PLAYLIST_LOAD_BUTTON_TIP=Abrir una lista de reproducción nueva o existente.
+PLAYLIST_LOAD_BUTTON_TIP=Abrir una lista de reproducción existente.
 #### PLAYLIST_SAVE_BUTTON_LABEL=Save As...
 PLAYLIST_SAVE_BUTTON_LABEL=Guardar...
 #### PLAYLIST_SAVE_BUTTON_TIP=Save the Current Play List to a File
@@ -946,7 +946,7 @@ DOWNLOAD_APPLY_NEW_THEME_START=Ha descargado una carátula nueva llamada "
 #### DOWNLOAD_APPLY_NEW_THEME_END=." Would you like to use this new skin?
 DOWNLOAD_APPLY_NEW_THEME_END=." ¿Desea utilizar esta carátula nueva?
 #### DOWNLOAD_POSSIBLE_HOSTS=Possible Hosts
-DOWNLOAD_POSSIBLE_HOSTS=Computadoras centrales posibles
+DOWNLOAD_POSSIBLE_HOSTS=Posibles Computadoras Centrales
 #### DOWNLOAD_BUSY_HOSTS=Busy Hosts
 DOWNLOAD_BUSY_HOSTS=Computadoras centrales ocupadas
 #### DOWNLOAD_QUEUED_HOSTS=Remotely Queued
@@ -1020,7 +1020,7 @@ UPLOAD_TABLE_STRING_UPLOADING=Cargando
 #### UPLOAD_TABLE_STRING_LIMITREACHED=Upload Limit Reached
 UPLOAD_TABLE_STRING_LIMITREACHED=Alcanzó el límite de carga
 #### UPLOAD_TABLE_STRING_FREELOADER=Freeloader Uploading
-UPLOAD_TABLE_STRING_FREELOADER=Carga de cargador gratuito
+UPLOAD_TABLE_STRING_FREELOADER=Cargador libre Cargando
 #### UPLOAD_TABLE_STRING_PUSHFAILED=Couldn't Connect
 UPLOAD_TABLE_STRING_PUSHFAILED=No se pudo conectar
 #### UPLOAD_TABLE_STRING_INTERRUPTED=Transfer Interrupted
@@ -1050,7 +1050,7 @@ UPLOAD_QUEUED=en cola
 # Key/value pairs for MonitorView
 ###################################################################
 #### MONITOR_VIEW_INCOMING_SEARCHES=Show incoming searches
-MONITOR_VIEW_INCOMING_SEARCHES=Búsquedas entrantes
+MONITOR_VIEW_INCOMING_SEARCHES=Mostrar Búsquedas entrantes
 #### MONITOR_VIEW_SHOW_LAST=Show last
 MONITOR_VIEW_SHOW_LAST=Mostrar último
 #### MONITOR_VIEW_SEARCHES=searches
@@ -1225,7 +1225,7 @@ PLAYLIST_OPTIONS_CONTINUE=Continua
 #### PLAYLIST_OPTIONS_SHUFFLE=Shuffle
 PLAYLIST_OPTIONS_SHUFFLE=Aleatoria
 #### PLAYLIST_DIALOG_OPEN_TITLE=Open Play List (.m3u)
-PLAYLIST_DIALOG_OPEN_TITLE=Seleccionar lista de reproducción (.m3u)
+PLAYLIST_DIALOG_OPEN_TITLE=Abrir lista de reproducción (.m3u)
 #### PLAYLIST_DIALOG_SAVE_TITLE=Save Play List As
 PLAYLIST_DIALOG_SAVE_TITLE=Guardar lista de reproducción como...
 #### PLAYLIST_DIALOG_SAVE_SAVE=Save
