--- a/lib/messagebundles/MessagesBundle_es.properties
+++ b/lib/messagebundles/MessagesBundle_es.properties
@@ -256,9 +256,9 @@ SEARCH_TIP=Buscar y descargar archivos.
 #### MONITOR_TIP=View Searches and Uploads
 MONITOR_TIP=Ver búsquedas y cargas.
 #### CONNECTIONS_TIP=Show Connections to Other Clients
-CONNECTIONS_TIP=Mostrar Conexiones a otros clientes.
+CONNECTIONS_TIP=Mostrar conexiones a otros clientes.
 #### LIBRARY_TIP=View Repository of Saved Files
-LIBRARY_TIP=Ver Repositorio de Archivos Guardados.
+LIBRARY_TIP=Ver Repositorio de archivos guardados.
 
 ################################################################################
 # Key/Value pairs for the pull-down menus in the main window
@@ -619,7 +619,7 @@ SEARCH_VIRUS_MSG_THREE=seguro que desea descargarlo?
 #### SEARCH_SHOW_MESSAGE_MSG=Don't show this message again
 SEARCH_SHOW_MESSAGE_MSG=No volver a mostrar este mensaje
 #### SEARCH_DOWNLOAD_DIALOG_CONFIRM=Download Request
-SEARCH_DOWNLOAD_DIALOG_CONFIRM=Solicitud de Descarga
+SEARCH_DOWNLOAD_DIALOG_CONFIRM=Solicitud de descarga
 #### SEARCH_DEFAULT_FIELD_TITLE=Filename
 SEARCH_DEFAULT_FIELD_TITLE=Nombre del archivo
 #### SEARCH_MULTIPLE_HOSTS=Multiple
@@ -637,9 +637,9 @@ SEARCH_TYPE_BROWSEHOST=Conexión directa
 #### SEARCH_BROWSEHOST_TITLE=Got Friends?
 SEARCH_BROWSEHOST_TITLE=¿Tiene amigos?
 #### SEARCH_BROWSEHOST_DESC=Enter the IP address of a friend you'd like to connect to, click 'Direct Connect', and LimeWire will try to browse the files of that user.
-SEARCH_BROWSEHOST_DESC=Ingrese la dirección IP de un amigo a quien desea conectarse, haga clic en 'conexión directa' y LimeWire intentará buscar los archivos de dicho usuario.
+SEARCH_BROWSEHOST_DESC=Ingrese la dirección IP de un amigo con quien desea conectarse, haga clic en 'conexión directa' y LimeWire intentará buscar los archivos de dicho usuario.
 #### SEARCH_BROWSEHOST_MYIP=When your friends want to connect to you, they should enter
-SEARCH_BROWSEHOST_MYIP=Cuando sus amigos quieran conectarse con ud., deben colocar
+SEARCH_BROWSEHOST_MYIP=Cuando sus amigos quieran conectarse con usted, deben colocar
 #### SEARCH_BROWSEHOST_FIREWALLED=Your computer is behind a firewall or router and cannot receive direct connections.
 SEARCH_BROWSEHOST_FIREWALLED=Su computadora está detrás de un CortaFuegos (Firewall) o Enrutador y no puede recibir conexiones directas.
 #### SEARCH_BROWSEHOST_BUTTON=Direct Connect
@@ -718,7 +718,7 @@ SEARCH_FILTER_MEDIA=Medios
 #### DOWNLOAD_LAUNCH_BUTTON_LABEL=Preview
 DOWNLOAD_LAUNCH_BUTTON_LABEL=Vista previa
 #### DOWNLOAD_LAUNCH_BUTTON_TIP=Preview the Selected Downloads
-DOWNLOAD_LAUNCH_BUTTON_TIP=Vista Previa de las descargas seleccionadas
+DOWNLOAD_LAUNCH_BUTTON_TIP=Vista preliminar de las descargas seleccionadas.
 #### DOWNLOAD_KILL_BUTTON_LABEL=Stop
 DOWNLOAD_KILL_BUTTON_LABEL=Detener la descarga
 #### DOWNLOAD_KILL_BUTTON_TIP=Stop Selected Downloads
@@ -730,7 +730,7 @@ DOWNLOAD_RESUME_BUTTON_TIP=Reintentar la descarga
 #### DOWNLOAD_SOURCES_BUTTON_LABEL=Find Sources
 DOWNLOAD_SOURCES_BUTTON_LABEL=Encontrar fuentes
 #### DOWNLOAD_SOURCES_BUTTON_TIP=Try to Find Sources for Failed Downloads
-DOWNLOAD_SOURCES_BUTTON_TIP=Intentar encontrar las fuentes para descargas fallidas
+DOWNLOAD_SOURCES_BUTTON_TIP=Intentar encontrar fuentes para descargas fallidas
 #### DOWNLOAD_CLEAR_BUTTON_LABEL=Clear Inactive
 DOWNLOAD_CLEAR_BUTTON_LABEL=Borrar las descargas inactivas
 #### DOWNLOAD_CLEAR_BUTTON_TIP=Remove Inactive Downloads
@@ -984,9 +984,9 @@ UPLOAD_POPUP_MENU_KILL_UPLOAD=Detener carga
 #### UPLOAD_POPUP_MENU_CHAT=Chat with Host
 UPLOAD_POPUP_MENU_CHAT=Chat con la computadora central
 #### UPLOAD_KILL_BUTTON_LABEL=Kill Upload
-UPLOAD_KILL_BUTTON_LABEL=Detener carga
+UPLOAD_KILL_BUTTON_LABEL=Anular carga
 #### UPLOAD_KILL_BUTTON_TIP=Stop Selected Uploads
-UPLOAD_KILL_BUTTON_TIP=Detener las cargas seleccionadas
+UPLOAD_KILL_BUTTON_TIP=Anular las cargas seleccionadas
 #### UPLOAD_CLEAR_BUTTON_LABEL=Clear Inactive
 UPLOAD_CLEAR_BUTTON_LABEL=Borrar las cargas inactivas
 #### UPLOAD_CLEAR_BUTTON_TIP=Remove Inactive Uploads
@@ -1020,7 +1020,7 @@ UPLOAD_TABLE_STRING_UPLOADING=Cargando
 #### UPLOAD_TABLE_STRING_LIMITREACHED=Upload Limit Reached
 UPLOAD_TABLE_STRING_LIMITREACHED=Alcanzó el límite de carga
 #### UPLOAD_TABLE_STRING_FREELOADER=Freeloader Uploading
-UPLOAD_TABLE_STRING_FREELOADER=Cargador libre Cargando
+UPLOAD_TABLE_STRING_FREELOADER=Cargador libre cargando
 #### UPLOAD_TABLE_STRING_PUSHFAILED=Couldn't Connect
 UPLOAD_TABLE_STRING_PUSHFAILED=No se pudo conectar
 #### UPLOAD_TABLE_STRING_INTERRUPTED=Transfer Interrupted
@@ -1050,9 +1050,9 @@ UPLOAD_QUEUED=en cola
 # Key/value pairs for MonitorView
 ###################################################################
 #### MONITOR_VIEW_INCOMING_SEARCHES=Show incoming searches
-MONITOR_VIEW_INCOMING_SEARCHES=Mostrar Búsquedas entrantes
+MONITOR_VIEW_INCOMING_SEARCHES=Mostrar búsquedas entrantes
 #### MONITOR_VIEW_SHOW_LAST=Show last
-MONITOR_VIEW_SHOW_LAST=Mostrar último
+MONITOR_VIEW_SHOW_LAST=Mostrar últimas
 #### MONITOR_VIEW_SEARCHES=searches
 MONITOR_VIEW_SEARCHES=búsquedas
 #### MONITOR_VIEW_LEAF_MESSAGE=Your client is a leaf node shielded by an Ultrapeer. Hence you will see few or no searches in the monitor window.
@@ -1191,7 +1191,7 @@ LIBRARY_TABLE_UPLOAD_COUNT=Cargas
 #### LIBRARY_TREE_NEW_FOLDER_LABEL=New Folder
 LIBRARY_TREE_NEW_FOLDER_LABEL=Nueva carpeta
 #### LIBRARY_TREE_UNSHARE_FOLDER_LABEL=Stop Sharing
-LIBRARY_TREE_UNSHARE_FOLDER_LABEL=No compartir
+LIBRARY_TREE_UNSHARE_FOLDER_LABEL=Dejar de compartir
 #### LIBRARY_TREE_RENAME_FOLDER_LABEL=Rename
 LIBRARY_TREE_RENAME_FOLDER_LABEL=Cambiar nombre
 #### LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=To Play List
