Changed kill Download to cancel download and stop to cancel. Changed Force Resume to Resume. More action fixes.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -344,7 +344,7 @@ SEARCH_BUY_CD_LABEL=Buy...
 SEARCH_BUY_CD_TIP=Buy Selected Item
 SEARCH_SEARCH_BUTTON_LABEL=Search
 SEARCH_SEARCH_BUTTON_TIP=Search the Network for the Given Words
-SEARCH_STOP_BUTTON_LABEL=Stop
+SEARCH_STOP_BUTTON_LABEL=Stop Search
 SEARCH_STOP_BUTTON_TIP=Stop Collecting Search Results for Selected Tab
 SEARCH_PUBLIC_KILL_STRING=Close Search
 SEARCH_PUBLIC_LAUNCH_STRING=Launch Action
@@ -416,7 +416,7 @@ SEARCH_FILTER_MEDIA=Media
 
 DOWNLOAD_LAUNCH_BUTTON_LABEL=Preview
 DOWNLOAD_LAUNCH_BUTTON_TIP=Preview the Selected Downloads
-DOWNLOAD_KILL_BUTTON_LABEL=Stop
+DOWNLOAD_KILL_BUTTON_LABEL=Cancel
 DOWNLOAD_KILL_BUTTON_TIP=Stop Selected Downloads
 DOWNLOAD_RESUME_BUTTON_LABEL=Resume
 DOWNLOAD_RESUME_BUTTON_TIP=Try to Reattempt a Download
@@ -498,8 +498,8 @@ STATISTICS_CONNECTION_WAKING_UP_TIP=LimeWire is waking up from sleep mode.
 # right-click popop menu and labels for the various column headers and
 # download statistics table cells.
 ################################################################################
-DOWNLOAD_POPUP_MENU_KILL_DOWNLOAD=Kill Download
-DOWNLOAD_POPUP_MENU_RESUME=Force Resume
+DOWNLOAD_POPUP_MENU_KILL_DOWNLOAD=Cancel Download
+DOWNLOAD_POPUP_MENU_RESUME=Resume
 DOWNLOAD_POPUP_MENU_LAUNCH=Preview File
 DOWNLOAD_POPUP_MENU_CHAT=Chat with Host
 DOWNLOAD_POPUP_MENU_BROWSE=Browse Host
