Added translation keys for save location error dialog. Edit location of first selected download, don't enforce single selction.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -426,6 +426,8 @@ DOWNLOAD_CLEAR_BUTTON_LABEL=Clear Inactive
 DOWNLOAD_CLEAR_BUTTON_TIP=Remove Inactive Downloads
 DOWNLOAD_PAUSE_BUTTON_LABEL=Pause
 DOWNLOAD_PAUSE_BUTTON_TIP=Pause the Selected Downloads
+DOWNLOAD_POPUP_MENU_EDIT_LOCATION_LABEL=Change File Location...
+DOWNLOAD_POPUP_MENU_EDIT_LOCATION_TIP=Edit the Final Filename of the Download
 
 LIBRARY_LAUNCH_BUTTON_LABEL=Launch
 LIBRARY_LAUNCH_BUTTON_TIP=Launch Selected Files
@@ -2355,3 +2357,11 @@ ALL_OOB_RESPONSES=Responses Received
 ALL_OOB_BYPASSED=Responses Bypassed
 STATS_OOB_THROUGHPUT_TITLE=OOB Success Rate
 STATS_OOB_THROUGHPUT_LABEL=Number of Responses Requested and Received via the OOB Protocol
+
+################################################################################
+# Key/value pair for save location error states
+################################################################################
+SAVE_LOCATION_ALREADY_EXISTS_ERROR=Could not save file location, download is either finished or currupt.
+SAVE_LOCATION_HAS_NO_PARENT_ERROR=Could not save file location because parent directory does not exist.
+SAVE_LOCATION_DIRECTORY_NOT_WRITEABLE_ERROR=Could not save file location because you do not have write access to the directory.
+SAVE_LOCATION_CATCH_ALL_ERROR=Could not save file location.
