Removed unthrown exceptions. Added SaveLocationException where necessary and changed the interfaces of RouterService, DownloadManager, ManagedDownloader nad MagnetDownloader

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -2361,7 +2361,7 @@ STATS_OOB_THROUGHPUT_LABEL=Number of Responses Requested and Received via the OO
 ################################################################################
 # Key/value pair for save location error states
 ################################################################################
-SAVE_LOCATION_ALREADY_EXISTS_ERROR=Could not save file location, download is either finished or currupt.
+SAVE_LOCATION_ALREADY_EXISTS_ERROR=Could not save file location, a file with this name already exists.
+SAVE_LOCATION_ALREADY_SAVED_ERROR=Could not save file location, the download is already finished.
 SAVE_LOCATION_HAS_NO_PARENT_ERROR=Could not save file location because parent directory does not exist.
 SAVE_LOCATION_DIRECTORY_NOT_WRITEABLE_ERROR=Could not save file location because you do not have write access to the directory.
-SAVE_LOCATION_CATCH_ALL_ERROR=Could not save file location.
