oops, forgot to check this in

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -455,11 +455,13 @@ PLAYLIST_FILE_DESCRIPTION=Play List Files (*.m3u)
 # Key/value pairs for the integrated media player...
 ################################################################################
 MEDIA_PLAYER_DEFAULT_STRING=LimeWire Media Player
+MEDIA_PLAYER_WAITING_STRING=please wait...
 MEDIA_PLAY_BUTTON_TIP=Play
 MEDIA_PAUSE_BUTTON_TIP=Pause
 MEDIA_STOP_BUTTON_TIP=Stop
 MEDIA_FORWARD_BUTTON_TIP=Next
 MEDIA_REWIND_BUTTON_TIP=Previous
+MEDIA_VOLUME_CONTROL_TIP=Volume
 
 #anu added
 PASSWORD_DIALOG_USERNAME_FIELD_LABEL=Username
