--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -2362,7 +2362,10 @@ STATS_OOB_THROUGHPUT_LABEL=Number of Responses Requested and Received via the OO
 ################################################################################
 # Key/value pair for save location error states
 ################################################################################
-SAVE_LOCATION_ALREADY_EXISTS_ERROR=Could not save file location, a file with this name already exists.
-SAVE_LOCATION_ALREADY_SAVED_ERROR=Could not save file location, the download is already finished.
-SAVE_LOCATION_HAS_NO_PARENT_ERROR=Could not save file location because parent directory does not exist.
-SAVE_LOCATION_DIRECTORY_NOT_WRITEABLE_ERROR=Could not save file location because you do not have write access to the directory.
+SAVE_LOCATION_ALREADY_EXISTS_ERROR=Could not set file location, a file with the name "{0}" already exists.
+SAVE_LOCATION_ALREADY_SAVED_ERROR=Could not set file location, the download is already finished.
+SAVE_LOCATION_HAS_NO_PARENT_ERROR=Could not set file location because parent directory does not exist.
+SAVE_LOCATION_DIRECTORY_NOT_WRITEABLE_ERROR=Could not set file location because you do not have write access to the directory "{0}".
+SAVE_LOCATION_DIRECTORY_DOES_NOT_EXIST_ERROR=Could not set file location because the directory "{0}" does not exist. 
+SAVE_LOCATION_NOT_A_DIRECOTRY_ERROR=Could not set download directory {0} because it denotes an already existing file.
+SAVE_LOCATION_SECURITY_VIOLATION_ERROR=Could not set file location, the file name {0} is invalid and may corrupt your system. 
