Added new translation keys. Fixed other null pointer exception.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1172,6 +1172,8 @@ OPTIONS_SAVE_DIR_DEFAULT_BUTTON_LABEL=Use Default
 OPTIONS_SAVE_DIR_BROWSE_BUTTON_TIP=Choose another Directory
 OPTIONS_SAVE_DIR_DEFAULT_BUTTON_TIP=Use the Default Directory
 OPTIONS_SAVE_MEDIATYPE_DIR_LABEL=Specify an optional download directory for each mediatype.
+OPTIONS_SAVE_MEDIATYPE_BROWSE_LABEL=Browse...
+OPTIONS_SAVE_MEDIATYPE_BROWSE_TIP=Open Dialog to Select a Directory
 OPTIONS_SAVE_RESET_BUTTON_LABEL=Reset
 OPTIONS_SAVE_RESET_BUTTON_TIP=Reset to Default Download Directory
 OPTIONS_SAVE_MEDIATYPE_DIR_BROWSE_BUTTON_LABEL=Browse...
