more cleanups, removed unnecessary keys

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -1172,7 +1172,6 @@ OPTIONS_SAVE_DIR_DEFAULT_BUTTON_LABEL=Use Default
 OPTIONS_SAVE_DIR_BROWSE_BUTTON_TIP=Choose another Directory
 OPTIONS_SAVE_DIR_DEFAULT_BUTTON_TIP=Use the Default Directory
 OPTIONS_SAVE_MEDIATYPE_DIR_LABEL=Specify an optional download directory for each mediatype.
-OPTIONS_SAVE_MEDIATYPE_BROWSE_LABEL=Browse...
 OPTIONS_SAVE_MEDIATYPE_BROWSE_TIP=Open Dialog to Select a Directory
 OPTIONS_SAVE_RESET_BUTTON_LABEL=Reset
 OPTIONS_SAVE_RESET_BUTTON_TIP=Reset to Default Download Directory
@@ -2370,4 +2369,10 @@ SAVE_LOCATION_HAS_NO_PARENT_ERROR=Could not set file location because parent dir
 SAVE_LOCATION_DIRECTORY_NOT_WRITEABLE_ERROR=Could not set file location because you do not have write access to the directory "{0}".
 SAVE_LOCATION_DIRECTORY_DOES_NOT_EXIST_ERROR=Could not set file location because the directory "{0}" does not exist. 
 SAVE_LOCATION_NOT_A_DIRECOTRY_ERROR=Could not set download directory {0} because it denotes an already existing file.
-SAVE_LOCATION_SECURITY_VIOLATION_ERROR=Could not set file location, the file name {0} is invalid and may corrupt your system. 
+SAVE_LOCATION_SECURITY_VIOLATION_ERROR=Could not set file location, the file name {0} is invalid and may corrupt your system.
+SAVE_LOCATION_FILE_NOT_REGULAR_ERROR=Could not set file location because {0} is not a regular file.
+SAVE_LOCATION_FILESYSTEM_ERROR=Could not set file location due to an error in the filesystem.
+################################################################################
+# Key/value pair for download location dialog
+################################################################################
+DOWNLOAD_LOCATION_DIALOG_TITLE=Choose Save Location
