--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -966,6 +966,8 @@ MESSAGE_INVALID_SAVE_DIRECTORY=LimeWire was unable to use the specified director
 MESSAGE_FILE_CORRUPT=LimeWire has detected a corruption in the file
 MESSAGE_CONTINUE_DOWNLOAD=Do you want to continue the download?
 MESSAGE_LANG_CHANGE=Please note that you must restart limewire for the language to change. Also, make sure that you have the required fonts for the selected language.
+MESSAGE_SENSITIVE_SHARE_TOP=You are attempting to share a folder that is likely to contain sensitive information:
+MESSAGE_SENSITIVE_SHARE_BOTTOM=Share this folder?
 
 ################################################################################
 # Key/Value pairs for the invalid save directory window that is displayed
