Extra key for clear inactive action in popup menu.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -428,6 +428,7 @@ DOWNLOAD_PAUSE_BUTTON_LABEL=Pause
 DOWNLOAD_PAUSE_BUTTON_TIP=Pause the Selected Downloads
 DOWNLOAD_POPUP_MENU_EDIT_LOCATION_LABEL=Change File Location...
 DOWNLOAD_POPUP_MENU_EDIT_LOCATION_TIP=Edit the Final Filename of the Download
+DOWNLOAD_POPUP_MENU_CLEAR=Clear All Inactive
 
 LIBRARY_LAUNCH_BUTTON_LABEL=Launch
 LIBRARY_LAUNCH_BUTTON_TIP=Launch Selected Files
@@ -516,7 +517,7 @@ DOWNLOAD_TIME_REMAINING_COLUMN=Time
 DOWNLOAD_SERVER_COLUMN=Vendor/Version
 DOWNLOAD_STATUS_QUEUED=Queued
 DOWNLOAD_STATUS_CONNECTING=Connecting...
-DOWNLOAD_STATUS_WAITING=Waiting For Busy Hosts
+DOWNLOAD_STATUS_WAITING=Waiting On Busy Hosts
 DOWNLOAD_STATUS_COMPLETE=Complete
 DOWNLOAD_STATUS_ABORTED=Aborted
 DOWNLOAD_STATUS_FAILED=Awaiting Sources
