more key changes

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -428,7 +428,7 @@ DOWNLOAD_PAUSE_BUTTON_LABEL=Pause
 DOWNLOAD_PAUSE_BUTTON_TIP=Pause the Selected Downloads
 DOWNLOAD_POPUP_MENU_EDIT_LOCATION_LABEL=Change File Location...
 DOWNLOAD_POPUP_MENU_EDIT_LOCATION_TIP=Edit the Final Filename of the Download
-DOWNLOAD_POPUP_MENU_CLEAR=Clear All Inactive
+DOWNLOAD_POPUP_MENU_CLEAR=Clear All Inactive Downloads
 
 LIBRARY_LAUNCH_BUTTON_LABEL=Launch
 LIBRARY_LAUNCH_BUTTON_TIP=Launch Selected Files
@@ -502,8 +502,9 @@ STATISTICS_CONNECTION_WAKING_UP_TIP=LimeWire is waking up from sleep mode.
 # download statistics table cells.
 ################################################################################
 DOWNLOAD_POPUP_MENU_KILL_DOWNLOAD=Cancel Download
-DOWNLOAD_POPUP_MENU_RESUME=Resume
-DOWNLOAD_POPUP_MENU_LAUNCH=Preview File
+DOWNLOAD_POPUP_MENU_RESUME=Resume Download
+DOWNLOAD_POPUP_MENU_PAUSE=Pause Download
+DOWNLOAD_POPUP_MENU_LAUNCH=Preview Download
 DOWNLOAD_POPUP_MENU_CHAT=Chat with Host
 DOWNLOAD_POPUP_MENU_BROWSE=Browse Host
 DOWNLOAD_PRIORITY_COLUMN=Priority
