folder --> directory for consitency

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -191,15 +191,15 @@ MENU_FILE_CONNECT_ACCESSIBLE=Connect to the Network
 MENU_FILE_DISCONNECT=Disconnect
 MENU_FILE_DISCONNECT_MNEMONIC=I
 MENU_FILE_DISCONNECT_ACCESSIBLE=Disconnect from the Network
-MENU_FILE_LIBRARY_ADD_SHARED_FOLDER=Add Folder to Share
+MENU_FILE_LIBRARY_ADD_SHARED_FOLDER=Add Directory to Share
 MENU_FILE_LIBRARY_ADD_SHARED_FOLDER_MNEMONIC=A
-MENU_FILE_LIBRARY_ADD_SHARED_FOLDER_ACCESSIBLE=Add a Folder that You Would Like to Share
-MENU_FILE_LIBRARY_NEW_FOLDER=New Folder
+MENU_FILE_LIBRARY_ADD_SHARED_FOLDER_ACCESSIBLE=Add a Directory that You Would Like to Share
+MENU_FILE_LIBRARY_NEW_FOLDER=New Directory
 MENU_FILE_LIBRARY_NEW_FOLDER_MNEMONIC=N
-MENU_FILE_LIBRARY_NEW_FOLDER_ACCESSIBLE=Add a Folder to the Selected Library Folder
-MENU_FILE_LIBRARY_UNSHARE_FOLDER=Stop Sharing Folder
+MENU_FILE_LIBRARY_NEW_FOLDER_ACCESSIBLE=Add a Directory to the Selected Library Folder
+MENU_FILE_LIBRARY_UNSHARE_FOLDER=Stop Sharing Directory
 MENU_FILE_LIBRARY_UNSHARE_FOLDER_MNEMONIC=P
-MENU_FILE_LIBRARY_UNSHARE_FOLDER_ACCESSIBLE=Stop Sharing the Selected Library Folder
+MENU_FILE_LIBRARY_UNSHARE_FOLDER_ACCESSIBLE=Stop Sharing the Selected Library Directory
 MENU_FILE_LIBRARY_RENAME_FOLDER=Rename Folder
 MENU_FILE_LIBRARY_RENAME_FOLDER_MNEMONIC=R
 MENU_FILE_LIBRARY_RENAME_FOLDER_ACCESSIBLE=Rename the Selected Library Folder
@@ -721,7 +721,7 @@ SETUP_WELCOME_TITLE=Welcome
 SETUP_WELCOME_LABEL=Welcome to the LimeWire setup wizard. LimeWire will guide you through a series of steps to configure LimeWire for optimum performance.
 SETUP_WELCOME_PARTIAL_LABEL=Welcome to the LimeWire setup wizard. LimeWire has recently added new features that require your configuration. LimeWire will guide you through a series of steps to configure these new features.
 SETUP_SAVE_TITLE=Save Directory
-SETUP_SAVE_LABEL=Please choose a folder where you would like your files to be downloaded. This folder will also be shared with other gnutella users by default.
+SETUP_SAVE_LABEL=Please choose a directory where you would like your files to be downloaded. This directory will also be shared with other gnutella users by default.
 SETUP_SPEED_TITLE=Connection Speed
 SETUP_SPEED_LABEL=Please choose the speed of your Internet connection. Setting this speed correctly is important for optimum network performance. If you are not sure what type of Internet connection you have, or if your connection type is not listed, simply select whichever one seems the most appropriate.
 SETUP_STARTUP_TITLE=System Startup
@@ -967,13 +967,13 @@ MESSAGE_UNABLE_TO_CHANGE_DIRECTORY_END=. It may be in use by another application
 MESSAGE_UNABLE_TO_RENAME_FILE_START=Unable to rename the file
 MESSAGE_UNABLE_TO_RENAME_FILE_END=. It may be in use by another application.
 MESSAGE_INCOMPLETE_DIRECTORY_START=LimeWire will not allow you to
-MESSAGE_INCOMPLETE_DIRECTORY_END=the folder reserved for incomplete files.
+MESSAGE_INCOMPLETE_DIRECTORY_END=the directory reserved for incomplete files.
 MESSAGE_INVALID_SAVE_DIRECTORY=LimeWire was unable to use the specified directory for saving files. Please try a different directory.
 MESSAGE_FILE_CORRUPT=LimeWire has detected a corruption in the file
 MESSAGE_CONTINUE_DOWNLOAD=Do you want to continue the download?
 MESSAGE_LANG_CHANGE=Please note that you must restart limewire for the language to change. Also, make sure that you have the required fonts for the selected language.
-MESSAGE_SENSITIVE_SHARE_TOP=You are attempting to share a folder that is likely to contain sensitive information:
-MESSAGE_SENSITIVE_SHARE_BOTTOM=Share this folder?
+MESSAGE_SENSITIVE_SHARE_TOP=You are attempting to share a directory that is likely to contain sensitive information:
+MESSAGE_SENSITIVE_SHARE_BOTTOM=Share this directory?
 
 ################################################################################
 # Key/Value pairs for the invalid save directory window that is displayed
