--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -191,15 +191,15 @@ MENU_FILE_CONNECT_ACCESSIBLE=Connect to the Network
 MENU_FILE_DISCONNECT=Disconnect
 MENU_FILE_DISCONNECT_MNEMONIC=I
 MENU_FILE_DISCONNECT_ACCESSIBLE=Disconnect from the Network
-MENU_FILE_LIBRARY_ADD_SHARED_FOLDER=Add Directory to Share
+MENU_FILE_LIBRARY_ADD_SHARED_FOLDER=Add Folder to Share
 MENU_FILE_LIBRARY_ADD_SHARED_FOLDER_MNEMONIC=A
-MENU_FILE_LIBRARY_ADD_SHARED_FOLDER_ACCESSIBLE=Add a Directory that You Would Like to Share
-MENU_FILE_LIBRARY_NEW_FOLDER=New Directory
+MENU_FILE_LIBRARY_ADD_SHARED_FOLDER_ACCESSIBLE=Add a Folder that You Would Like to Share
+MENU_FILE_LIBRARY_NEW_FOLDER=New Folder
 MENU_FILE_LIBRARY_NEW_FOLDER_MNEMONIC=N
-MENU_FILE_LIBRARY_NEW_FOLDER_ACCESSIBLE=Add a Directory to the Selected Library Folder
-MENU_FILE_LIBRARY_UNSHARE_FOLDER=Stop Sharing Directory
+MENU_FILE_LIBRARY_NEW_FOLDER_ACCESSIBLE=Add a Folder to the Selected Library Folder
+MENU_FILE_LIBRARY_UNSHARE_FOLDER=Stop Sharing Folder
 MENU_FILE_LIBRARY_UNSHARE_FOLDER_MNEMONIC=P
-MENU_FILE_LIBRARY_UNSHARE_FOLDER_ACCESSIBLE=Stop Sharing the Selected Library Directory
+MENU_FILE_LIBRARY_UNSHARE_FOLDER_ACCESSIBLE=Stop Sharing the Selected Library Folder
 MENU_FILE_LIBRARY_RENAME_FOLDER=Rename Folder
 MENU_FILE_LIBRARY_RENAME_FOLDER_MNEMONIC=R
 MENU_FILE_LIBRARY_RENAME_FOLDER_ACCESSIBLE=Rename the Selected Library Folder
@@ -435,9 +435,9 @@ LIBRARY_LAUNCH_BUTTON_TIP=Launch Selected Files
 LIBRARY_DELETE_BUTTON_LABEL=Delete
 LIBRARY_DELETE_BUTTON_TIP=Delete Selected Files
 LIBRARY_REFRESH_BUTTON_LABEL=Refresh
-LIBRARY_REFRESH_BUTTON_TIP=Reload Shared Directories
+LIBRARY_REFRESH_BUTTON_TIP=Reload Shared Folders
 LIBRARY_EXPLORE_BUTTON_LABEL=Explore
-LIBRARY_EXPLORE_BUTTON_TIP=Open Library Directory
+LIBRARY_EXPLORE_BUTTON_TIP=Open Library Folder
 LIBRARY_PLAYLIST_BUTTON_LABEL=Enqueue
 LIBRARY_PLAYLIST_BUTTON_TIP=Add Selected Files to the Play List
 LIBRARY_ANNOTATE_BUTTON_LABEL=Describe...
@@ -662,7 +662,7 @@ CV_ADD_HOST_LABEL=Host:
 CV_ADD_PORT_LABEL=Port:
 CV_ADD_DIALOG_TITLE=Add Gnutella Connection
 CV_MEDIATYPE=Mediatype
-CV_DIRECTORY=Save Directory
+CV_DIRECTORY=Save Folder
 
 ################################################################################
 # Key/value pairs for strings in the library window
@@ -720,8 +720,8 @@ SETUP_LANGUAGE_LABEL=Please choose the language you would like LimeWire to use.
 SETUP_WELCOME_TITLE=Welcome
 SETUP_WELCOME_LABEL=Welcome to the LimeWire setup wizard. LimeWire will guide you through a series of steps to configure LimeWire for optimum performance.
 SETUP_WELCOME_PARTIAL_LABEL=Welcome to the LimeWire setup wizard. LimeWire has recently added new features that require your configuration. LimeWire will guide you through a series of steps to configure these new features.
-SETUP_SAVE_TITLE=Save Directory
-SETUP_SAVE_LABEL=Please choose a directory where you would like your files to be downloaded. This directory will also be shared with other gnutella users by default.
+SETUP_SAVE_TITLE=Save Folder
+SETUP_SAVE_LABEL=Please choose a folder where you would like your files to be downloaded. This folder will also be shared with other gnutella users by default.
 SETUP_SPEED_TITLE=Connection Speed
 SETUP_SPEED_LABEL=Please choose the speed of your Internet connection. Setting this speed correctly is important for optimum network performance. If you are not sure what type of Internet connection you have, or if your connection type is not listed, simply select whichever one seems the most appropriate.
 SETUP_STARTUP_TITLE=System Startup
@@ -732,11 +732,11 @@ SETUP_FIREWALL_LABEL_ONE=LimeWire needs to receive information from the network 
 SETUP_FIREWALL_TITLE_TWO=Firewall Warning
 SETUP_FIREWALL_LABEL_TWO=LimeWire is now requesting permission to use the network. If nothing appears, LimeWire has succesfully started listening to the network. If your software does pop up a warning, please allow LimeWire full access for best performance. Click 'Next' when finished.
 SETUP_SCAN_TITLE=Scan for Files
-SETUP_SCAN_LABEL=Would you like LimeWire to quickly scan your hard drive for other media files? You will have the opportunity to specify which directories you would like to share when the scan is complete.
+SETUP_SCAN_LABEL=Would you like LimeWire to quickly scan your hard drive for other media files? You will have the opportunity to specify which folders you would like to share when the scan is complete.
 SETUP_WAIT_TITLE=Scanning Hard Drive
 SETUP_WAIT_LABEL=Please wait as LimeWire scans your hard drive...
 SETUP_CONFIRM_TITLE=Confirm Scan
-SETUP_CONFIRM_LABEL=We identified the directories below as ones that you might like to share. If you would like to share one of these directories, simply check its associated checkbox. Subdirectories of shared directories will also be shared.
+SETUP_CONFIRM_LABEL=We identified the folders below as ones that you might like to share. If you would like to share one of these folders, simply check its associated checkbox. Subfolders of shared folders will also be shared.
 SETUP_CONFIRM_LABEL_NO_DIRECTORIES=LimeWire was unable to locate any files that may be shared. To continue configuring LimeWire, click "Next".
 SETUP_FINISH_TITLE=Finish Setup
 SETUP_FINISH_LABEL=Your LimeWire setup has successfully completed. Please press the "Finish" button to begin using LimeWire.
@@ -750,18 +750,18 @@ DIRECTORY_CHOOSER_CAPTION=Select
 # Key/value pairs for a directory file chooser
 ################################################################################
 FILE_CHOOSER_DIRECTORY_BUTTON_LABEL=Select
-FILE_CHOOSER_DIRECTORY_TITLE=Select Directory
+FILE_CHOOSER_DIRECTORY_TITLE=Select Folder
 
 ################################################################################
 # Key/value pairs for strings in the init package
 # com.limegroup.gnutella.gui.init -- the wizard to setup the program when
 # limewire.props is not present or when the "INSTALLED" setting is false
 ################################################################################
-INIT_SAVE_DIRECTORY_FIELD_LABEL=Directory:
+INIT_SAVE_DIRECTORY_FIELD_LABEL=Folder:
 INIT_SAVE_BROWSE_BUTTON_LABEL=Browse...
-INIT_SAVE_BROWSE_BUTTON_TIP=Choose another Directory
+INIT_SAVE_BROWSE_BUTTON_TIP=Choose another Folder
 INIT_SAVE_DEFAULT_BUTTON_LABEL=Use Default
-INIT_SAVE_DEFAULT_BUTTON_TIP=Use the Default Directory
+INIT_SAVE_DEFAULT_BUTTON_TIP=Use the Default Folder
 
 ################################################################################
 # Key/Value pairs for the pro window on startup
@@ -953,33 +953,33 @@ UPDATE_TIP=Visit http://www.limewire.com to update!
 ################################################################################
 MESSAGE_CAPTION=Message
 MESSAGE_ERROR_CAPTION=Error
-MESSAGE_SHARE_SAVE_DIR=Would you like to add the save directory to your list of shared directories? Subdirectories of this directory will also be shared.
-MESSAGE_CONFIRM_UNSHARE_DIRECTORY=Are you sure you want to stop sharing this directory?
-MESSAGE_CANNOT_UNSHARE_SUBDIRS=LimeWire cannot stop sharing subdirectories of directories that are shared.
+MESSAGE_SHARE_SAVE_DIR=Would you like to add the save folder to your list of shared folders? Subfolders of this folder will also be shared.
+MESSAGE_CONFIRM_UNSHARE_DIRECTORY=Are you sure you want to stop sharing this folder?
+MESSAGE_CANNOT_UNSHARE_SUBDIRS=LimeWire cannot stop sharing subfolders of folders that are shared.
 MESSAGE_OVERWRITE_EXISTING_FILE=Overwrite existing file
 MESSAGE_FILE_LAUNCHING_SECURITY_MESSAGE=LimeWire will not launch the specified file for security reasons.
 MESSAGE_CONFIRM_FILE_DELETE=Are you sure you want to delete the selected file(s)?
 MESSAGE_UNABLE_TO_DELETE_FILE_START=Unable to delete the file
 MESSAGE_UNABLE_TO_DELETE_FILE_END=. It may be in use by another application.
-MESSAGE_UNABLE_TO_DELETE_DIRECTORY_START=Unable to delete the directory
-MESSAGE_UNABLE_TO_RENAME_DIRECTORY_START=Unable to rename the directory
+MESSAGE_UNABLE_TO_DELETE_DIRECTORY_START=Unable to delete the folder
+MESSAGE_UNABLE_TO_RENAME_DIRECTORY_START=Unable to rename the folder
 MESSAGE_UNABLE_TO_CHANGE_DIRECTORY_END=. It may be in use by another application.
 MESSAGE_UNABLE_TO_RENAME_FILE_START=Unable to rename the file
 MESSAGE_UNABLE_TO_RENAME_FILE_END=. It may be in use by another application.
 MESSAGE_INCOMPLETE_DIRECTORY_START=LimeWire will not allow you to
-MESSAGE_INCOMPLETE_DIRECTORY_END=the directory reserved for incomplete files.
-MESSAGE_INVALID_SAVE_DIRECTORY=LimeWire was unable to use the specified directory for saving files. Please try a different directory.
+MESSAGE_INCOMPLETE_DIRECTORY_END=the folder reserved for incomplete files.
+MESSAGE_INVALID_SAVE_DIRECTORY=LimeWire was unable to use the specified folder for saving files. Please try a different folder.
 MESSAGE_FILE_CORRUPT=LimeWire has detected a corruption in the file
 MESSAGE_CONTINUE_DOWNLOAD=Do you want to continue the download?
 MESSAGE_LANG_CHANGE=Please note that you must restart limewire for the language to change. Also, make sure that you have the required fonts for the selected language.
-MESSAGE_SENSITIVE_SHARE_TOP=You are attempting to share a directory that is likely to contain sensitive information:
-MESSAGE_SENSITIVE_SHARE_BOTTOM=Share this directory?
+MESSAGE_SENSITIVE_SHARE_TOP=You are attempting to share a folder that is likely to contain sensitive information:
+MESSAGE_SENSITIVE_SHARE_BOTTOM=Share this folder?
 
 ################################################################################
 # Key/Value pairs for the invalid save directory window that is displayed
 # when the user does not have a valid save directory.
 ################################################################################
-INVALID_SAVE_DIR_LABEL=The stored directory for saving files is not valid. Please enter a new directory in the directory chooser.
+INVALID_SAVE_DIR_LABEL=The stored folder for saving files is not valid. Please enter a new folder in the folder chooser.
 
 ################################################################################
 # Key/value pair for the message shown when LimeWire couldn't connect to the
@@ -1010,7 +1010,7 @@ ERROR_DISK_FULL_DOWNLOAD=LimeWire cannot download the selected file because your
 ERROR_DISK_FULL_GENERIC=LimeWire was unable to write a necessary file because your hard drive is full. To continue using LimeWire you must free up space on your hard drive.
 ERROR_LOCKED_BY_PROCESS_DOWNLOAD=LimeWire was unable to download the selected file because another program is using the file. Please close the other program and retry the download.
 ERROR_LOCKED_BY_PROCESS_GENERIC=LimeWire was unable to open a necessary file because another program has locked the file. LimeWire may act unexpectedly until this file is released.
-ERROR_ACCESS_DENIED_DOWNLOAD=LimeWire was unable to create or continue writing an incomplete file for the selected download because you do not have permission to write files to the incomplete directory. To continue using LimeWire, please choose a different Save Directory.
+ERROR_ACCESS_DENIED_DOWNLOAD=LimeWire was unable to create or continue writing an incomplete file for the selected download because you do not have permission to write files to the incomplete folder. To continue using LimeWire, please choose a different Save Folder.
 ERROR_ACCESS_DENIED_GENERIC=LimeWire was unable to write a necessary file because you do not have the necessary permissions. Your preferences may not be maintained the next time you start LimeWire, or LimeWire may behave in unexpected ways.
 ERROR_INVALID_NAME_DOWNLOAD=LimeWire was unable to open the incomplete file for the selected download because the file name contains characters which are not supported by your operating system.
 ERROR_INVALID_NAME_GENERIC=LimeWire cannot open a necessary file because the file name contain characters which are not supported by your operating system. LimeWire may behave in unexpected ways.
@@ -1048,10 +1048,10 @@ ERROR_INCOMING_CONNECTIONS=Could not listen to socket for incoming connections; 
 ERROR_THREE_CHARACTER_SEARCH=Your search must be at least three characters to avoid congesting the network.
 ERROR_NETWORK_FLOODING=This search may return lots of results and slow the network. Are you sure you want to continue?
 ERROR_BROWSE_FAILED=Could not browse files on the requested host. This machine is probably not accepting more incoming connections.
-ERROR_INVALID_SAVE_DIRECTORY=Invalid directory for saving files. Please use another directory or revert to the default.
-ERROR_INVALID_SAVE_DIRECTORY_WINDOW=Your save directory is not valid. It may have been deleted, you may not have permissions to write to it, or there may be another problem. Please choose a different directory.
-ERROR_INVALID_SAVE_DIRECTORY_SELECTION=The selected save directory is invalid. You may not have permissions to write to the selected directory. LimeWire will revert to your previously selected directory.
-ERROR_INVALID_SHARED_DIRECTORY=Invalid directory for sharing files. Please use another directory or revert to the default.
+ERROR_INVALID_SAVE_DIRECTORY=Invalid folder for saving files. Please use another folder or revert to the default.
+ERROR_INVALID_SAVE_DIRECTORY_WINDOW=Your save folder is not valid. It may have been deleted, you may not have permissions to write to it, or there may be another problem. Please choose a different folder.
+ERROR_INVALID_SAVE_DIRECTORY_SELECTION=The selected save folder is invalid. You may not have permissions to write to the selected folder. LimeWire will revert to your previously selected folder.
+ERROR_INVALID_SHARED_DIRECTORY=Invalid folder for sharing files. Please use another folder or revert to the default.
 ERROR_FORCE_IP_PORT_RANGE=You must enter a port between 1 and 65535 when manually forcing your port.
 ERROR_CONNECT_STRING=Connect strings must be at least length 1, contain one space, and may not contain 'GIV', 'GET', or any other HTTP keywords.
 ERROR_PORT_RANGE=Please enter a port between 1 and 65535.
@@ -1064,7 +1064,7 @@ NO_PREVIEW_END=.
 ERROR_CANT_RESUME_START=The file
 ERROR_CANT_RESUME_END=is not a valid incomplete file and cannot be resumed.
 ERROR_OPEN_URL=LimeWire could not locate your web browser to display the following webpage:
-ERROR_ACCESSING_SAVE_DIRECTORY=Could not access the save directory. Please select a new save directory in the Options menu and try again.
+ERROR_ACCESSING_SAVE_DIRECTORY=Could not access the save folder. Please select a new save folder in the Options menu and try again.
 ERROR_DEL_META_USER=Cannot remove unsaved info.
 ERROR_DEL_META_SYSTEM=Unable to remove data.
 ERROR_SAVE_META_DOC=Internal Document Error. Data could not be saved.
@@ -1166,19 +1166,19 @@ OPTIONS_LOCALIZE_COUNTRY_BOX_LABEL=Country
 # in the options window
 ################################################################################
 OPTIONS_SAVE_ON_CLOSE=You have made changes to some settings. Would you like to save these changes?
-OPTIONS_SAVE_DIR_TITLE=Save Directory
-OPTIONS_SAVE_DIR_LABEL=You can choose the directory for saving files.
-OPTIONS_SAVE_DIR_BOX_LABEL=Directory:
+OPTIONS_SAVE_DIR_TITLE=Save Folder
+OPTIONS_SAVE_DIR_LABEL=You can choose the folder for saving files.
+OPTIONS_SAVE_DIR_BOX_LABEL=Folder:
 OPTIONS_SAVE_DIR_BROWSE_BUTTON_LABEL=Browse...
 OPTIONS_SAVE_DIR_DEFAULT_BUTTON_LABEL=Use Default
-OPTIONS_SAVE_DIR_BROWSE_BUTTON_TIP=Choose another Directory
-OPTIONS_SAVE_DIR_DEFAULT_BUTTON_TIP=Use the Default Directory
-OPTIONS_SAVE_MEDIATYPE_DIR_LABEL=Specify an optional download directory for each mediatype.
-OPTIONS_SAVE_MEDIATYPE_BROWSE_TIP=Open Dialog to Select a Directory
+OPTIONS_SAVE_DIR_BROWSE_BUTTON_TIP=Choose another Folder
+OPTIONS_SAVE_DIR_DEFAULT_BUTTON_TIP=Use the Default Folder
+OPTIONS_SAVE_MEDIATYPE_DIR_LABEL=Specify an optional download folder for each mediatype.
+OPTIONS_SAVE_MEDIATYPE_BROWSE_TIP=Open Dialog to Select a Folder
 OPTIONS_SAVE_RESET_BUTTON_LABEL=Reset
-OPTIONS_SAVE_RESET_BUTTON_TIP=Reset to Default Download Directory
+OPTIONS_SAVE_RESET_BUTTON_TIP=Reset to Default Download Folder
 OPTIONS_SAVE_MEDIATYPE_DIR_BROWSE_BUTTON_LABEL=Browse...
-OPTIONS_SAVE_MEDIATYPE_DIR_BROWSE_BUTTON_TIP=Choose another Directory
+OPTIONS_SAVE_MEDIATYPE_DIR_BROWSE_BUTTON_TIP=Choose another Folder
 OPTIONS_PURGE_INCOMPLETE_TIME_TITLE=Incomplete Files
 OPTIONS_PURGE_INCOMPLETE_TIME_LABEL=You can automatically delete old incomplete download files.
 OPTIONS_PURGE_INCOMPLETE_TIME_NUMBER_LABEL=Days to Keep Incomplete Files:
@@ -1187,11 +1187,11 @@ OPTIONS_PURGE_INCOMPLETE_TIME_NUMBER_LABEL=Days to Keep Incomplete Files:
 # Key/value pairs for the shared directories options window item
 # in the options window
 ################################################################################
-OPTIONS_SHARED_DIRS_TITLE=Shared Directories
-OPTIONS_SHARED_DIRS_LABEL=You can choose the directories for sharing files. Files in these directories are displayed in the library.
-OPTIONS_SHARED_DIRS_BOX_LABEL=Directories:
-OPTIONS_SHARED_DIRS_BUTTON_LABEL=Add Directory...
-OPTIONS_SHARED_DIRS_BUTTON_TIP=Add a Directory to Share
+OPTIONS_SHARED_DIRS_TITLE=Shared Folders
+OPTIONS_SHARED_DIRS_LABEL=You can choose the folders for sharing files. Files in these folders are displayed in the library.
+OPTIONS_SHARED_DIRS_BOX_LABEL=Folders:
+OPTIONS_SHARED_DIRS_BUTTON_LABEL=Add Folder...
+OPTIONS_SHARED_DIRS_BUTTON_TIP=Add a Folder to Share
 
 ################################################################################
 # Key/value pairs for the shared extension options window item
@@ -2367,10 +2367,10 @@ STATS_OOB_THROUGHPUT_LABEL=Number of Responses Requested and Received via the OO
 ################################################################################
 SAVE_LOCATION_ALREADY_EXISTS_ERROR=Could not set file location, a file with the name "{0}" already exists.
 SAVE_LOCATION_ALREADY_SAVED_ERROR=Could not set file location, the download is already finished.
-SAVE_LOCATION_HAS_NO_PARENT_ERROR=Could not set file location because parent directory does not exist.
-SAVE_LOCATION_DIRECTORY_NOT_WRITEABLE_ERROR=Could not set file location because you do not have write access to the directory "{0}".
-SAVE_LOCATION_DIRECTORY_DOES_NOT_EXIST_ERROR=Could not set file location because the directory "{0}" does not exist. 
-SAVE_LOCATION_NOT_A_DIRECOTRY_ERROR=Could not set download directory {0} because it denotes an already existing file.
+SAVE_LOCATION_HAS_NO_PARENT_ERROR=Could not set file location because parent folder does not exist.
+SAVE_LOCATION_DIRECTORY_NOT_WRITEABLE_ERROR=Could not set file location because you do not have write access to the folder "{0}".
+SAVE_LOCATION_DIRECTORY_DOES_NOT_EXIST_ERROR=Could not set file location because the folder "{0}" does not exist. 
+SAVE_LOCATION_NOT_A_DIRECOTRY_ERROR=Could not set download folder {0} because it denotes an already existing file.
 SAVE_LOCATION_SECURITY_VIOLATION_ERROR=Could not set file location, the file name {0} is invalid and may corrupt your system.
 SAVE_LOCATION_FILE_NOT_REGULAR_ERROR=Could not set file location because {0} is not a regular file.
 SAVE_LOCATION_FILESYSTEM_ERROR=Could not set file location due to an error in the filesystem.
