Added localization keys.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -679,11 +679,15 @@ LIBRARY_TABLE_NUMALTLOC=Locations
 LIBRARY_TABLE_LICENSE=License
 LIBRARY_TABLE_UPLOAD_COUNT=Uploads
 LIBRARY_TREE_NEW_FOLDER_LABEL=New Folder
+LIBRARY_TREE_SHARE_FOLDER_LABEL=Share Folder
 LIBRARY_TREE_UNSHARE_FOLDER_LABEL=Stop Sharing
 LIBRARY_TREE_RENAME_FOLDER_LABEL=Rename
 LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=To Play List
 LIBRARY_TREE_SAVED_DIRECTORY=Saved Files
 LIBRARY_TREE_INCOMPLETE_DIRECTORY=Incomplete Files
+LIBRARY_TREE_SHARED_FILES_DIRECTORY=Shared Files
+LIBRARY_TREE_INDIVIDUALLY_SHARED_FILES_DIRECTORY=Individually Shared Files
+LIBRARY_TREE_INDIVIDUALLY_SHARED_FILES_DIRECTORY_TOOLTIP=List of All Individually Shared Files
 
 ################################################################################
 # Key/value pairs for burn cd link
@@ -2378,3 +2382,9 @@ SAVE_LOCATION_FILESYSTEM_ERROR=Could not set file location due to an error in th
 # Key/value pair for download location dialog
 ################################################################################
 DOWNLOAD_LOCATION_DIALOG_TITLE=Choose Save Location
+################################################################################
+# Key/value pair for sharing of files specially/individually
+################################################################################
+SHARE_FILE_INDIVIDUALLY_POPUP_MENU_LABEL=Share File Individually
+SHARE_FILE_INDIVIDUALLY_POPUP_MENU_TOOLTIP=
+UNSHARE_FILE_INDIVIDUALLY_POPUP_MENU_LABEL=Stop Sharing File Individually
