--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -2386,5 +2386,5 @@ DOWNLOAD_LOCATION_DIALOG_TITLE=Choose Save Location
 # Key/value pair for sharing of files specially/individually
 ################################################################################
 SHARE_FILE_INDIVIDUALLY_POPUP_MENU_LABEL=Share File Individually
-SHARE_FILE_INDIVIDUALLY_POPUP_MENU_TOOLTIP=
+SHARE_FILE_INDIVIDUALLY_POPUP_MENU_TOOLTIP=Files That Are Shared Individually and not Part of any Shared Folder
 UNSHARE_FILE_INDIVIDUALLY_POPUP_MENU_LABEL=Stop Sharing File Individually
