--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -680,7 +680,7 @@ LIBRARY_TABLE_LICENSE=License
 LIBRARY_TABLE_UPLOAD_COUNT=Uploads
 LIBRARY_TREE_NEW_FOLDER_LABEL=New Folder
 LIBRARY_TREE_SHARE_FOLDER_LABEL=Share Folder
-LIBRARY_TREE_UNSHARE_FOLDER_LABEL=Stop Sharing
+LIBRARY_TREE_UNSHARE_FOLDER_LABEL=Stop Sharing Folder
 LIBRARY_TREE_RENAME_FOLDER_LABEL=Rename
 LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=To Play List
 LIBRARY_TREE_SAVED_DIRECTORY=Saved Files
