--- a/lib/messagebundles/MessagesBundle_nl.properties
+++ b/lib/messagebundles/MessagesBundle_nl.properties
@@ -78,7 +78,7 @@ GENERAL_BROWSE_HOST_TIP=Overzicht van alle bestanden van de gebruiker.
 #### CONTEXT_MENU_UNDO=Undo
 CONTEXT_MENU_UNDO=Ongedaan maken
 #### CONTEXT_MENU_CUT=Cut
-CONTEXT_MENU_CUT=Knip
+CONTEXT_MENU_CUT=Knippen
 #### CONTEXT_MENU_COPY=Copy
 CONTEXT_MENU_COPY=Kopieer
 #### CONTEXT_MENU_PASTE=Paste
